text overflows fix.

--- a/blocks/cards/__content/cards__content.css
+++ b/blocks/cards/__content/cards__content.css
@@ -1,8 +1,9 @@
 .cards__content{
-    margin: 0;
+    margin: 0 15px 0 21px;
+    max-width: 246px;
     padding: 25px 0 30px;
     color: black;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
 }   
