--- a/blocks/cards/__name/cards__name.css
+++ b/blocks/cards/__name/cards__name.css
@@ -1,6 +1,10 @@
 .cards__name{
     margin: 0;
+    max-width: 220px;
     font-weight: 900;
     font-size: 24px;
     line-height: 1.2;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
